--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,9 @@ form h2 {
   letter-spacing: -0.5px;
   margin-bottom: 1.6rem;
 }
+
+.stats {
+  text-align: center;
+  font-weight: 700;
+  padding: 3.2rem 0;
+}
